# aivika-experiment-chart-test

./: README.md  aivika-experiment-chart-test.cabal  aivika-experiment-dde-test.cabal  ikeda.ode  mackey-glass.ode  stack.yaml
app/: Experiment.hs  Main.hs  Model.hs
src/: Ikeda.hs  MackeyGlass.lhs
