name:                aivika-experiment-dde-test
version:             0.1.0.1
synopsis:            A simulation model demonstrating the chart plotting 
description:
    This demonstration features delay differential equations simulated
    in Aivika.
    .
license:             BSD3
license-file:        LICENSE
author:              David Sorokin
maintainer:          david.sorokin@gmail.com
copyright:           (c) 2017. David Sorokin <david.sorokin@gmail.com>
copyright:           (c) 2017. Bogdan Penkovsky
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable aivika-experiment-dde-test
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Model
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aivika
                     , aivika-transformers
                     , aivika-experiment
                     , aivika-experiment-chart
                     , aivika-experiment-diagrams
                     , aivika-experiment-dde-test
                     , Chart
                     , Chart-diagrams
                     , array
                     , mtl
                     , open-browser
                     , filepath
                     , directory
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell,
                       DeriveGeneric,
                       DeriveDataTypeable

test-suite aivika-experiment-dde-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aivika-experiment-dde-test
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
